# homeWorksMain

./: .gitignore  README.md
Lesson 10. CMake/: README.md
Lesson 10. CMake/Task 1. The simplest project/: CMakeLists.txt  README.md  main.cpp
Lesson 10. CMake/Task 2. The project is more complicated/: README.md
Lesson 10. CMake/Task 2. The project is more complicated/Source/Classes/: CMakeLists.txt  Figure.h  Quadrangle.h  Rectangle.h  Triangle.h  print_info.cpp  print_info.h
Lesson 11. Building and connecting libraries/: README.md
Lesson 11. Building and connecting libraries/Task1. Static_library/: Task1. Static_library.sln
Lesson 11. Building and connecting libraries/Task1. Static_library/scr/: CMakeLists.txt
Lesson 11. Building and connecting libraries/Task2. Dynamic Library/scr/: CMakeLists.txt  Greeter.cpp  Greeter.h  main.cpp
Lesson 11. Building and connecting libraries/Task2._Dynamic_Library/: Task2._Dynamic_Library.sln
Lesson 11. Building and connecting libraries/Task4._Class_hierarchy/: Task4._Class_hierarchy.sln
Lesson 2. struct and enum/: README.md
Lesson 2. struct and enum/Task 1. Months/: README.md  (+2 more)
Lesson 3. classes and objects/: README.md
Lesson 4. abstraction and encapsulation/: README.md
Lesson 5. inheritance and polymorphism/: README.md
Lesson 6. multi-file projects/: README.md
Lesson 7. Preprocessor and macros/: README.md
Lesson 8. Errors and exeptions/: README.md
Lesson 9. Operator overloading/: README.md
Racing Simulator/: Racing Simulator.sln  racing_simulator.sln
Task_1._Months/: Task 1. Months.sln  main.cpp
(+262 files in other folders)
