cmake_minimum_required(VERSION 3.22.2)
project(Dynamic_library VERSION 0.2 LANGUAGES CXX)
set(CMAKE_CXX_FLAGS_RELEASE)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ..//lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ..//bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ..//bin)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS  on)
add_library(myDll SHARED Greeter.h Greeter.cpp)
add_executable(Dynamic_library main.cpp)
target_link_libraries(Dynamic_library myDll)